Refactor project headings and add images.

--- a/creative-design.html
+++ b/creative-design.html
@@ -26,14 +26,17 @@
         </div>
 
         <div class="focus">
-            <h1>Creative and Design Projects</h1>
+            <h1>Creative and</h1>
+            <h1>Design Projects</h1>
             <p>
                 Explore your artistic and innovative side with projects that are visually engaging and imaginative.
             </p>
         </div>
+        <img src="creativity-img.jpeg" alt="project" id="focus_img" style="width: 45%;">
 
         <div class="sec2">
-            <h2 class="note">Project Ideas</h2>
+            <h2 class="note">Get Inspired!</h2>
+            <h1>Categories of Creative and Design Projects</h1>
             <div class="Categories">
                 <div id="c1">
                     <h1 class="count">01</h1>
