--- a/environmental.html
+++ b/environmental.html
@@ -26,11 +26,14 @@
         </div>
 
         <div class="focus">
-            <h1>Environmental Projects</h1>
+            <h1>Environmental</h1>
+            <h1>Projects</h1>
             <p>
                 Explore innovative project ideas that contribute to sustainability and environmental conservation.
             </p>
         </div>
+        <img src="environment-img.jpg" alt="project" id="focus_img" style="width: 40%;">
+
 
         <div class="sec2">
             <h2 class="note">Get Inspired!</h2>
