--- a/gaming-entertainment.html
+++ b/gaming-entertainment.html
@@ -26,11 +26,15 @@
         </div>
 
         <div class="focus">
-            <h1>Gaming and Entertainment Projects</h1>
+            <h1>Gaming and</h1>
+            <h1>Entertainment</h1>
+            <h1>Projects</h1>
             <p>
                 Explore fun and engaging ideas for game development or entertainment apps.
             </p>
         </div>
+        <img src="gaming-img.jpg" alt="project" id="focus_img" style="width: 45%;">
+
 
         <div class="sec2">
             <h2 class="note">Get Inspired!</h2>
