--- a/social-impact.html
+++ b/social-impact.html
@@ -25,9 +25,18 @@
             </ul>
         </div>
 
+        <div class="focus">
+            <h1>Social Impact</h1>
+            <h1>Projects</h1>
+            <p>
+                Projects aimed at solving societal challenges like healthcare, education, and rural development.
+            </p>
+        </div>
+        <img src="social-impact-img.jpg" alt="project" id="focus_img" style="width: 45%;">
+
         <div class="sec2">
             <h2 class="note">Get Inspired!</h2>
-            <h1>Social Impact Projects</h1>
+            <h1>Categories of Social Impact Projects</h1>
             <div class="Categories">
                 <div id="c1">
                     <h1 class="count">01</h1>
