Add search functionality and update project title in README

--- a/creative-design.html
+++ b/creative-design.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
+        <script src="redirectToGoogleSearch.js"></script>
         <title>Creative and Design Projects</title>
     </head>
     <body>
@@ -38,35 +38,35 @@
             <h2 class="note">Get Inspired!</h2>
             <h1>Categories of Creative and Design Projects</h1>
             <div class="Categories">
-                <div id="c1">
+                <div id="c1" onclick="searchProject('Graphic Design Projects')">
                     <h1 class="count">01</h1>
                     <div class="content">
                         <h2>Graphic Design Projects</h2>
                         <p>Engage in projects that enhance your skills in graphic design, including branding, poster design, and digital illustrations.</p>
                     </div>
                 </div>
-                <div id="c2">
+                <div id="c2" onclick="searchProject('Web Design Projects')">
                     <h1 class="count">02</h1>
                     <div class="content">
                         <h2>Web Design Projects</h2>
                         <p>Create visually appealing and user-friendly websites, focusing on layout, color schemes, and user experience.</p>
                     </div>
                 </div>
-                <div id="c3">
+                <div id="c3" onclick="searchProject('Product Design Projects')">
                     <h1 class="count">03</h1>
                     <div class="content">
                         <h2>Product Design Projects</h2>
                         <p>Innovate and design new products, considering functionality, aesthetics, and user needs.</p>
                     </div>
                 </div>
-                <div id="c4">
+                <div id="c4" onclick="searchProject('Interior Design Projects')">
                     <h1 class="count">04</h1>
                     <div class="content">
                         <h2>Interior Design Projects</h2>
                         <p>Transform spaces with creative interior design projects that focus on aesthetics and functionality.</p>
                     </div>
                 </div>
-                <div id="c5">
+                <div id="c5" onclick="searchProject('Fashion Design Projects')">
                     <h1 class="count">05</h1>
                     <div class="content">
                         <h2>Fashion Design Projects</h2>
