--- a/environmental.html
+++ b/environmental.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
+        <script src="redirectToGoogleSearch.js"></script>
         <title>Environmental Projects</title>
     </head>
     <body>
@@ -39,35 +39,35 @@
             <h2 class="note">Get Inspired!</h2>
             <h1>Categories of Environmental Projects</h1>
             <div class="Categories">
-                <div id="c1">
+                <div id="c1" onclick="searchProject('Renewable Energy Projects')">
                     <h1 class="count">01</h1>
                     <div class="content">
                         <h2>Renewable Energy Projects</h2>
                         <p>Projects focusing on solar, wind, and other renewable energy sources to promote sustainable energy solutions.</p>
                     </div>
                 </div>
-                <div id="c2">
+                <div id="c2" onclick="searchProject('Waste Management Projects')">
                     <h1 class="count">02</h1>
                     <div class="content">
                         <h2>Waste Management Projects</h2>
                         <p>Innovative ideas for recycling, composting, and reducing waste in communities.</p>
                     </div>
                 </div>
-                <div id="c3">
+                <div id="c3" onclick="searchProject('Water Conservation Projects')">
                     <h1 class="count">03</h1>
                     <div class="content">
                         <h2>Water Conservation Projects</h2>
                         <p>Projects aimed at conserving water resources and promoting efficient water usage.</p>
                     </div>
                 </div>
-                <div id="c4">
+                <div id="c4" onclick="searchProject('Biodiversity Conservation Projects')">
                     <h1 class="count">04</h1>
                     <div class="content">
                         <h2>Biodiversity Conservation Projects</h2>
                         <p>Efforts to protect endangered species and restore natural habitats.</p>
                     </div>
                 </div>
-                <div id="c5">
+                <div id="c5" onclick="searchProject('Community Gardening Projects')">
                     <h1 class="count">05</h1>
                     <div class="content">
                         <h2>Community Gardening Projects</h2>
