--- a/gaming-entertainment.html
+++ b/gaming-entertainment.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
+        <script src="redirectToGoogleSearch.js"></script>
         <title>Gaming and Entertainment Projects</title>
     </head>
     <body>
@@ -40,35 +40,35 @@
             <h2 class="note">Get Inspired!</h2>
             <h1>Categories of Gaming Projects</h1>
             <div class="Categories">
-                <div id="c1">
+                <div id="c1" onclick="searchProject('Mobile Game Development')">
                     <h1 class="count">01</h1>
                     <div class="content">
                         <h2>Mobile Game Development</h2>
                         <p>Ideas for creating engaging mobile games that captivate users and provide entertainment on the go.</p>
                     </div>
                 </div>
-                <div id="c2">
+                <div id="c2" onclick="searchProject('Web-Based Games')">
                     <h1 class="count">02</h1>
                     <div class="content">
                         <h2>Web-Based Games</h2>
                         <p>Develop interactive web games that can be played directly in the browser, focusing on accessibility and fun.</p>
                     </div>
                 </div>
-                <div id="c3">
+                <div id="c3" onclick="searchProject('Virtual Reality Experiences')">
                     <h1 class="count">03</h1>
                     <div class="content">
                         <h2>Virtual Reality Experiences</h2>
                         <p>Create immersive VR experiences that transport users to new worlds and provide unique entertainment.</p>
                     </div>
                 </div>
-                <div id="c4">
+                <div id="c4" onclick="searchProject('Game Design and Mechanics')">
                     <h1 class="count">04</h1>
                     <div class="content">
                         <h2>Game Design and Mechanics</h2>
                         <p>Explore the principles of game design, including mechanics, storytelling, and user engagement.</p>
                     </div>
                 </div>
-                <div id="c5">
+                <div id="c5" onclick="searchProject('Entertainment Apps')">
                     <h1 class="count">05</h1>
                     <div class="content">
                         <h2>Entertainment Apps</h2>
