--- a/social-impact.html
+++ b/social-impact.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
+        <script src="redirectToGoogleSearch.js"></script>
         <title>Social Impact Projects</title>
     </head>
     <body>
@@ -38,35 +38,35 @@
             <h2 class="note">Get Inspired!</h2>
             <h1>Categories of Social Impact Projects</h1>
             <div class="Categories">
-                <div id="c1">
+                <div id="c1" onclick="searchProject('Healthcare Initiatives')">
                     <h1 class="count">01</h1>
                     <div class="content">
                         <h2>Healthcare Initiatives</h2>
                         <p>Projects aimed at improving healthcare access and quality in underserved communities.</p>
                     </div>
                 </div>
-                <div id="c2">
+                <div id="c2" onclick="searchProject('Education Programs')">
                     <h1 class="count">02</h1>
                     <div class="content">
                         <h2>Education Programs</h2>
                         <p>Innovative projects that enhance educational opportunities for children and adults.</p>
                     </div>
                 </div>
-                <div id="c3">
+                <div id="c3" onclick="searchProject('Community Development')">
                     <h1 class="count">03</h1>
                     <div class="content">
                         <h2>Community Development</h2>
                         <p>Projects focused on improving local infrastructure and community resources.</p>
                     </div>
                 </div>
-                <div id="c4">
+                <div id="c4" onclick="searchProject('Advocacy and Awareness')">
                     <h1 class="count">04</h1>
                     <div class="content">
                         <h2>Advocacy and Awareness</h2>
                         <p>Initiatives that raise awareness about social issues and advocate for change.</p>
                     </div>
                 </div>
-                <div id="c5">
+                <div id="c5" onclick="searchProject('Environmental Justice')">
                     <h1 class="count">05</h1>
                     <div class="content">
                         <h2>Environmental Justice</h2>
