--- a/technology.html
+++ b/technology.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
+        <script src="redirectToGoogleSearch.js"></script>
         <title>Technology Projects</title>
     </head>
     <body>
@@ -38,35 +38,35 @@
             <h2 class="note">Get Inspired!</h2>
             <h1>Project Ideas</h1>
             <div class="Categories">
-                <div id="c1">
+                <div id="c1" onclick="searchProject('AI and Machine Learning')">
                     <h1 class="count">01</h1>
                     <div class="content">
                         <h2>AI and Machine Learning</h2>
                         <p>Develop projects that utilize artificial intelligence and machine learning algorithms to solve real-world problems.</p>
                     </div>
                 </div>
-                <div id="c2">
+                <div id="c2" onclick="searchProject('Web Development')">
                     <h1 class="count">02</h1>
                     <div class="content">
                         <h2>Web Development</h2>
                         <p>Create dynamic and responsive websites using modern web technologies and frameworks.</p>
                     </div>
                 </div>
-                <div id="c3">
+                <div id="c3" onclick="searchProject('Mobile App Development')">
                     <h1 class="count">03</h1>
                     <div class="content">
                         <h2>Mobile App Development</h2>
                         <p>Design and develop mobile applications for Android and iOS platforms that enhance user experience.</p>
                     </div>
                 </div>
-                <div id="c4">
+                <div id="c4" onclick="searchProject('Internet of Things (IoT)')">
                     <h1 class="count">04</h1>
                     <div class="content">
                         <h2>Internet of Things (IoT)</h2>
                         <p>Explore projects that connect devices and sensors to the internet for smart solutions.</p>
                     </div>
                 </div>
-                <div id="c5">
+                <div id="c5" onclick="searchProject('Blockchain Technology')">
                     <h1 class="count">05</h1>
                     <div class="content">
                         <h2>Blockchain Technology</h2>
